--- a/aboutus.html
+++ b/aboutus.html
@@ -9,6 +9,27 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="aboutus.css" />
+    <style>
+      .footer-links{
+        position: relative;
+        right: 20px;
+    }
+    @media screen and (max-width: 768px) {
+        .logo-col img{
+          position: relative;
+          left: 30%;
+        }
+        
+        .footer-links{
+          position: relative;
+          left: -15px;
+        }
+        .instagram-col{
+          position: relative;
+          left: -10px;
+        }
+    }
+    </style>
   </head>
   <body>
     <header>
