--- a/guidelines.html
+++ b/guidelines.html
@@ -1465,9 +1465,13 @@ footer {
         align-items: center;
       }
 
-      .logo-col {
+      .logo-col img {
         position: relative;
-        left: 50px;
+        left: 90px;
+      }
+      .footer-desc{
+        position: relative;
+        left: 10px;
       }
 
     }
