--- a/team.html
+++ b/team.html
@@ -1042,7 +1042,31 @@
         position: relative;
         left: 50px;
       }
-
+      .footer-links a{
+        position: relative;
+        right: 220px;
+      }
+      .footer-links{
+        display: flex;
+        flex-direction: column;
+      }
+      .logo-col img{
+        position: relative;
+        left: 50px;
+      }
+      .footer-desc{
+        position: relative;
+        left: 10px;
+      }
+      
+    }
+    footer{
+      display: flex;
+      flex-direction: column;
+    }
+    .footer-links{
+        position: relative;
+        right: -50%;
     }
   </style>
 </head>
