FOOTER AND NAVBAR UPDATES

--- a/team.html
+++ b/team.html
@@ -1044,7 +1044,7 @@
       }
       .footer-links a{
         position: relative;
-        right: 220px;
+        right: 240px;
       }
       .footer-links{
         display: flex;
@@ -1058,6 +1058,31 @@
         position: relative;
         left: 10px;
       }
+      body{
+        width: 100%;
+      }
+      header{
+        width: 100%;
+      }
+      footer{
+        width: 100%;
+      }
+
+      .container{
+        /* margin: 8px; */
+        padding-left: 18px;
+        padding-right: 18px;
+        width: 125%;
+      }
+      h1{
+       position: relative;
+       left: 60px;
+      }
+      .team-grid{
+        position: relative;
+        left: 45px;
+      }
+      
       
     }
     footer{
@@ -1067,6 +1092,9 @@
     .footer-links{
         position: relative;
         right: -50%;
+    }
+    .footer-links{
+      margin-right: 50px;
     }
   </style>
 </head>
