--- a/guidelines.html
+++ b/guidelines.html
@@ -1373,7 +1373,10 @@ footer {
         /* underline color */
       }
     }
-
+    
+    .footer-links{
+      margin-left: 300px;
+    }
     @media screen and (max-width: 768px) {
       header {
         display: flex;
@@ -1463,6 +1466,7 @@ footer {
         display: flex;
         justify-content: center;
         align-items: center;
+
       }
 
       .logo-col img {
@@ -1472,6 +1476,10 @@ footer {
       .footer-desc{
         position: relative;
         left: 10px;
+      }
+      .footer-links{
+        position: relative;
+        right: 60px;
       }
 
     }
