--- a/aboutus.html
+++ b/aboutus.html
@@ -29,6 +29,11 @@
           left: -10px;
         }
     }
+
+    @media (min-width:769px) {
+    .footer-logo img{
+        margin-left: -3rem !important;
+    } }
     </style>
   </head>
   <body>
@@ -228,7 +233,7 @@
     
 
     <script>
-      fetch("footer.html")
+      fetch("new_footer.html")
         .then((response) => response.text())
         .then((data) => {
           document.body.insertAdjacentHTML("beforeend", data);
