--- a/contact.html
+++ b/contact.html
@@ -778,7 +778,17 @@
       }
       
     }
-    
+    .footer-links{
+        position: relative;
+        right: -20%;
+    }
+    .footer-links{
+      margin-right: 50px;
+    }
+    @media (min-width:769px) {
+    .footer-logo img{
+        margin-left: -3rem !important;
+    } }
     </style>
   </head>
 
@@ -879,7 +889,7 @@
    
   </body>
   <script>
-    fetch("footer.html")
+    fetch("new_footer.html")
         .then((response) => response.text())
         .then((data) => {
           document.body.insertAdjacentHTML("beforeend", data);
