--- a/index1.html
+++ b/index1.html
@@ -2067,7 +2067,7 @@ header {
       navLinks.classList.toggle('active');
     });
 
-    fetch("footer.html")
+    fetch("new_footer.html")
       .then((response) => response.text())
       .then((data) => {
         document.body.insertAdjacentHTML("beforeend", data);
