--- a/guidelines.html
+++ b/guidelines.html
@@ -1490,7 +1490,10 @@ footer {
     .nav-links{
       margin-right: 60px;
     }
-
+    @media (min-width:769px) {
+    .footer-logo img{
+        margin-left: -3rem !important;
+    } }
     </style>
 </head>
 
@@ -1602,7 +1605,7 @@ footer {
     
 </body>
     <script>
-                fetch("footer.html")
+                fetch("new_footer.html")
             .then(response => response.text())
             .then(data => {
                 document.body.insertAdjacentHTML("beforeend", data);
