--- a/guidelines.html
+++ b/guidelines.html
@@ -1481,6 +1481,9 @@ footer {
         position: relative;
         right: 60px;
       }
+      .logo{
+        width:100%;
+      }
 
     }
     .instagram-col{
@@ -1506,7 +1509,7 @@ footer {
                 </a>
             </div>
             <ul class="nav-links">
-                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="index1.html" class="nav-link">Home</a></li>
                 <li><a href="aboutus.html"class="nav-link">About Us</a></li>
                 <li><a href="team.html"class="nav-link">Team</a></li>
                 <li><a href="pastevent.html"class="nav-link">Past Events</a></li>
@@ -1605,7 +1608,7 @@ footer {
     
 </body>
     <script>
-                fetch("new_footer.html")
+                fetch("footer.html")
             .then(response => response.text())
             .then(data => {
                 document.body.insertAdjacentHTML("beforeend", data);
