--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </a>
       </div>
       <ul class="nav-links">
-        <li><a href="index.html" class="nav-link">Home</a></li>
+        <li><a href="index1.html" class="nav-link">Home</a></li>
         <li><a href="aboutus.html" class="nav-link">About Us</a></li>
         <li><a href="team.html" class="nav-link">Team</a></li>
         <li><a href="pastevent.html" class="nav-link">Past Events</a></li>
