--- a/pastevent.html
+++ b/pastevent.html
@@ -1429,6 +1429,9 @@
         position: relative;
         left: 10px;
       }
+      .logo{
+        width:100%;
+      }
       
 
     }
@@ -1468,7 +1471,7 @@
           </a>
         </div>
         <ul class="nav-links">
-          <li><a href="index.html" class="nav-link">Home</a></li>
+          <li><a href="index1.html" class="nav-link">Home</a></li>
           <li><a href="aboutus.html" class="nav-link">About Us</a></li>
           <li><a href="team.html" class="nav-link">Team</a></li>
           <li><a href="pastevent.html" class="nav-link">Past Events</a></li>
@@ -1735,7 +1738,7 @@
     <img class="decorative-vector vector-2" src="vector1.svg" alt="" />
 
     <script>
-      fetch("new_footer.html")
+      fetch("footer.html")
         .then((response) => response.text())
         .then((data) => {
           document.body.insertAdjacentHTML("beforeend", data);
