--- a/pastevent.html
+++ b/pastevent.html
@@ -1432,6 +1432,12 @@
       .logo{
         width:100%;
       }
+      .nav-links.active {
+      display: flex;
+      gap: 4px;
+      height: 367.2px;
+     margin-top:6px;
+    }
       
 
     }
