--- a/guidelines.html
+++ b/guidelines.html
@@ -1484,6 +1484,12 @@ footer {
       .logo{
         width:100%;
       }
+      .nav-links.active {
+      display: flex;
+      gap: 4px;
+      height: 321px;
+      margin-top:4px;
+    }
 
     }
     .instagram-col{
