HEADER LOGO FIX

--- a/contact.html
+++ b/contact.html
@@ -794,9 +794,9 @@
         .container{
           margin-left: 25%;
         }
-        .logo{
+        /* .logo{
         width:100%;
-      }
+      } */
         
       }
     </style>
