--- a/guidelines.html
+++ b/guidelines.html
@@ -1403,6 +1403,7 @@ footer {
         font-size: 28px;
         color: white;
         cursor: pointer;
+        margin-right: 9%;
       }
 
       .nav-links {
@@ -1481,9 +1482,9 @@ footer {
         position: relative;
         right: 60px;
       }
-      .logo{
+      /* .logo{
         width:100%;
-      }
+      } */
       .nav-links.active {
       display: flex;
       gap: 4px;
