--- a/pastevent.html
+++ b/pastevent.html
@@ -1429,9 +1429,9 @@
         position: relative;
         left: 10px;
       }
-      .logo{
+      /* .logo{
         width:100%;
-      }
+      } */
       .nav-links.active {
       display: flex;
       gap: 4px;
