--- a/team.html
+++ b/team.html
@@ -955,9 +955,9 @@
       .page-container{
         margin-left: 20%;
       }
-      .logo{
+      /* .logo{
         width:100%;
-      }
+      } */
     }
       
     
