--- a/guidelines.html
+++ b/guidelines.html
@@ -1511,7 +1511,7 @@ footer {
     <header>
         <nav>
             <div class="nav-left">
-                <a href="index.html" class="logo-link">
+                <a href="index1.html" class="logo-link">
                     <img src="images/tedxlogowhite.png" alt="TEDxMITWPU Logo" class="logo">
                 </a>
             </div>
