--- a/aboutus.html
+++ b/aboutus.html
@@ -44,7 +44,7 @@
     <header>
       <nav>
         <div class="nav-left">
-          <a href="index.html" class="logo-link">
+          <a href="index1.html" class="logo-link">
             <img
               src="images/tedxlogowhite.png"
               alt="TEDxMITWPU Logo"
