--- a/guidelines.html
+++ b/guidelines.html
@@ -1428,6 +1428,7 @@ footer {
         padding: 10px 0;
         text-decoration: none;
         position: relative;
+        right: 20%;
       }
 
       .nav-links li a.active::after {
@@ -1491,6 +1492,22 @@ footer {
       height: 321px;
       margin-top:4px;
     }
+    .nav-links li a.active::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 2px;
+      background-color: red;
+      /* underline color */
+    }
+    body{
+    width: 100vw;
+  }
+  header{
+    width: 100vw;
+  }
 
     }
     .instagram-col{
@@ -1503,7 +1520,9 @@ footer {
     @media (min-width:769px) {
     .footer-logo img{
         margin-left: -3rem !important;
-    } }
+    }
+  
+}
     </style>
 </head>
 
