--- a/footer.html
+++ b/footer.html
@@ -32,7 +32,7 @@
                     <li><a href="pastevent.html">Past Events</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                     <li><a href="guidelines.html">Guidelines</a></li>
-                    <li><a href="#">Brochure</a></li>
+                    <li><a href="brochure.pdf">Brochure</a></li>
                 </ul>
             </div>
         </div>
