--- a/contact.html
+++ b/contact.html
@@ -764,15 +764,15 @@
     .instagram-col{
       
       position: relative;
-      top: -20px;
-      left: 100px;
+      top: -25px;
+      left: 10%;
     }
     .footer-links{
       margin-right: 400px;
     }
     .footer-links{
       position: relative;
-      right: -20%;
+      right: -25%;
     }
     .footer-links{
       margin-right: 50px;
