--- a/team.html
+++ b/team.html
@@ -849,7 +849,8 @@
       }
       .instagram-col{
         position: relative;
-        left: 10%;
+        left: 15%;
+        top: 0;
       }
       
       
