--- a/pastevent.html
+++ b/pastevent.html
@@ -774,7 +774,9 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin-top: 4px;
+        /* margin-top: 4px; */
+        position: relative;
+        top: 0;
       }
 
       .instagram-text {
