--- a/guidelines.html
+++ b/guidelines.html
@@ -1545,6 +1545,16 @@ footer {
     }
   
 }
+@media screen and (max-width: 376px) {
+        .footer-links{
+          position: relative;
+          left: -15%;
+        }
+        .instagram-col{
+          position: relative;
+          left: 1%;
+        }
+      }
     </style>
 </head>
 
